@startuml
skinparam defaultFontSize 18
left to right direction


entity User {
  * ID: Int <<PK>>
  --
  Name: String
  Email: String
  Password: String
}

entity Club {
  * ID: Int <<PK>>
  --
  Name: String
  OwnerId: Int <<FK>>
}

entity Court {
  * ID: Int <<PK>>
  --
  Name: String
  Location: String
  ClubId: Int <<FK>>
}

entity Rental {
  * ID: Int <<PK>>
  --
  Date: Date
  Initial_Hour: Time
  End_Hour: Time
  UserId: Int <<FK>>
  CourtId: Int <<FK>>
}

User ||--o{ Club : owns
Club ||--o{ Court : contains
User ||--o{ Rental : reserves
Court ||--o{ Rental : associated_with
@enduml